--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "built": "webpack",
+    "built:dev": "webpack",
+    "built:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
     "babel-preset-env": "1.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "extract-text-webpack-plugin": "3.0.0",
     "live-server": "^1.2.0",
     "node-sass": "4.5.3",
     "react": "16.0.0",
