--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "serve": "live-server public/",
     "built:dev": "webpack",
     "built:prod": "webpack -p --env production",
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server",
+    "script": "node server/server.js",
+    "heroku-postbuilt": "yarn run built:prod"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
@@ -18,6 +20,7 @@
     "babel-preset-env": "1.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "live-server": "^1.2.0",
     "node-sass": "4.5.3",
